--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 		<img src="ui-capture.png" id="ui-capture" />
 	</div>
 
-	<script src="app.js"></script>
+	<script type="module" src="app.js"></script>
 </body>
 </html>
