meta preview card with icon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<title>gremlin girl camera</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="../css/jul.css">
+
+	<meta property="og:title" content="webgbcam">
+	<meta property="og:description" content="gameboy camera-like experience in your browser!">
+	<meta property="og:image" content="https://maple.pet/webgbcam/icon.png">
+	<meta property="og:url" content="https://maple.pet/webgbcam/">
 </head>
 <body>
 
