fix canvas scaling nightmare

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 </head>
 <body>
 
-	<div id="camera" class="maple-window">
-		<canvas id="app-view"></canvas>
-		<canvas id="camera-view"></canvas>
-		<canvas id="camera-output"></canvas>
-		<video id="camera-stream" autoplay playsinline></video>
+	<div class="maple-window">
+		<div id="camera">
+			<canvas id="app-view"></canvas>
+			<canvas id="camera-view"></canvas>
+			<canvas id="camera-output"></canvas>
+			<video id="camera-stream" autoplay playsinline></video>
+		</div>
 	</div>
 
 	<div class="maple-window centered">
