add github link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 		<p>if the app above is blank, make sure you have cameras connected and browser camera permissions enabled!</p>
 
-		<p>this app is still very buggy on iOS and Safari, sorry for the inconvenience :(</p>
+		<p>this app is still very buggy on iOS and Safari, sorry for the inconvenience :(<br/>
+		you can check the source code on <a href="https://github.com/Lana-chan/webgbcam">github</a>!</p>
 
 		<p>if you like the stuff i do, check out <a href="https://maple.pet/">my website</a> or <a href="https://ko-fi.com/squirrel">donate to me on ko-fi</a>!</p>
 
