add button to hide UI buttons (fixes #6)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<img src="ui-main.png" id="ui-main" />
 		<img src="ui-settings.png" id="ui-settings" />
 		<img src="ui-capture.png" id="ui-capture" />
+		<img src="ui-hidden.png" id="ui-hidden" />
 	</div>
 
 	<script src="app.js"></script>
