add 3 second timer shutter function (fixes #2)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<img src="ui-settings.png" id="ui-settings" />
 		<img src="ui-capture.png" id="ui-capture" />
 		<img src="ui-hidden.png" id="ui-hidden" />
+		<img src="ui-timer.png" id="ui-timer" />
 	</div>
 
 	<script src="app.js"></script>
