--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
 	<div class="maple-window">
+		<div class="maple-window-title"><span>webgbcam v3</span></div>
 		<div id="camera">
 			<canvas id="app-view"></canvas>
 			<canvas id="camera-view"></canvas>
@@ -29,7 +30,8 @@
 
 		<p>if the app above is blank, make sure you have cameras connected and browser camera permissions enabled!</p>
 
-		<p>this app is still very buggy on iOS and Safari, sorry for the inconvenience :(<br/>
+		<p>webgbcam uses <a href="https://github.com/jnordberg/gif.js">gif.js</a><br/>
+		this app is still very buggy on iOS and Safari, sorry for the inconvenience :(<br/>
 		you can check the source code on <a href="https://github.com/Lana-chan/webgbcam">github</a>!</p>
 
 		<p>if you like the stuff i do, check out <a href="https://maple.pet/">my website</a> or <a href="https://ko-fi.com/squirrel">donate to me on ko-fi</a>!</p>
@@ -43,8 +45,10 @@
 		<img src="ui-capture.png" id="ui-capture" />
 		<img src="ui-hidden.png" id="ui-hidden" />
 		<img src="ui-timer.png" id="ui-timer" />
+		<img src="ui-record.png" id="ui-record" />
 	</div>
 
+	<script type="text/javascript" src="gifjs/gif.js"></script>
 	<script src="app.js"></script>
 	<script>
 	if('serviceWorker' in navigator) {
