fix flip on safari again

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 	<div class="maple-window">
-		<div class="maple-window-title"><span>webgbcam v3.1</span></div>
+		<div class="maple-window-title"><span>webgbcam v3.1-ios-fixes1</span></div>
 		<div id="camera">
 			<canvas id="app-view"></canvas>
 			<canvas id="camera-view"></canvas>
