add web3 support

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 	<meta property="og:url" content="https://maple.pet/webgbcam/">
 </head>
 <body>
-
 	<div class="maple-window">
-		<div class="maple-window-title"><span>webgbcam v3.2</span></div>
+		<div class="maple-window-title"><span>webgbcam v3.3</span></div>
 		<div id="camera">
 			<canvas id="app-view"></canvas>
 			<canvas id="camera-view"></canvas>
@@ -26,6 +25,8 @@
 	</div>
 
 	<div class="maple-window centered">
+		<h2 class="blink">NFTs: No Fucking Thanks</h2>
+
 		<p>made by <a href="https://twitter.com/maplesbian">@maplesbian</a> - inspired by christine love's interstellar selfie station</p>
 
 		<p>if the app above is blank, make sure you have cameras connected and browser camera permissions enabled!</p>
