--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<canvas id="camera-output"></canvas>
 			<video id="camera-stream" autoplay playsinline></video>
 		</div>
-	</div>
+	</div><br />
 
 	<div class="maple-window centered">
 		<h2 class="blink">NFTs: No Fucking Thanks</h2>
