perhaps bonghits will fix my serviceworker

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 						.then(function(registration) {
 							// Registration was successful
 							console.log('ServiceWorker registration successful with scope: ', registration.scope);
+							registration.update();
 						}, function(err) {
 							// registration failed :(
 							console.log('ServiceWorker registration failed: ', err);
