--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div class="maple-window">
-		<div class="maple-window-title"><span>webgbcam v3.5</span></div>
+		<div class="maple-window-title"><span>webgbcam v4.0</span></div>
 		<div id="camera">
 			<canvas id="app-view"></canvas>
 			<canvas id="camera-view"></canvas>
@@ -27,7 +27,7 @@
 	<div class="maple-window centered">
 		<h2 class="blink">NFTs: No Fucking Thanks</h2>
 
-		<p>made by <a href="https://twitter.com/maplesbian">@maplesbian</a> - inspired by christine love's interstellar selfie station</p>
+		<p>made by <a href="https://maple.pet">maple</a> - inspired by christine love's interstellar selfie station</p>
 
 		<p>if the app above is blank, make sure you have cameras connected and browser camera permissions enabled!</p>
 
